# turbo-sport

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml
.claude/: launch.json
app/: package-lock.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
app/src/routes/: +page.svelte
apps/basketball/src-tauri/: Cargo.toml  tauri.conf.json
apps/basketball/src-tauri/src/: lib.rs
apps/basketball/src/lib/design/: AppShell.svelte  dto.ts  theme.ts  tokens.css
apps/basketball/src/lib/screens/: Home.svelte  Match.svelte  Profile.svelte  Squad.svelte  Table.svelte  Transfers.svelte
apps/basketball/src/routes/: +page.svelte
apps/cycling/src-tauri/: Cargo.toml  tauri.conf.json
apps/cycling/src-tauri/src/: lib.rs
apps/cycling/src/lib/design/: AppShell.svelte  Icon.svelte  dto.ts  theme.ts
apps/cycling/src/lib/screens/: Home.svelte  Race.svelte  Roster.svelte  Stage.svelte
apps/cycling/src/routes/: +page.svelte
apps/football/src-tauri/: Cargo.toml  tauri.conf.json
apps/football/src-tauri/src/: lib.rs
apps/football/src/lib/design/: AppShell.svelte  dto.ts  theme.ts  tokens.css
apps/football/src/lib/screens/: Home.svelte  Match.svelte  Profile.svelte  Search.svelte  Squad.svelte  Table.svelte  Transfers.svelte
apps/football/src/routes/: +page.svelte
apps/tennis/src-tauri/: Cargo.toml  tauri.conf.json
apps/tennis/src-tauri/src/: lib.rs
apps/tennis/src/lib/design/: AppShell.svelte  color.ts  dto.ts  theme.ts
apps/tennis/src/lib/screens/: Bracket.svelte  Draw.svelte  Home.svelte  Match.svelte
apps/tennis/src/routes/: +page.svelte
docs/: ARCHITECTURE.md  BACKLOG.md  DESIGN-PORT.md
editor/: package-lock.json  package.json
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/src/: lib.rs
editor/src/routes/: +page.svelte
sim-core/: Cargo.toml
sim-core/examples/: heartbeat.rs
sim-core/src/: club.rs  competition.rs  database.rs  economy.rs  entity.rs  league.rs  lib.rs  lifecycle.rs  persistence.rs  pyramid.rs  rng.rs  schedule.rs  sim.rs  time.rs  transfers.rs  view.rs
sports/basketball/: Cargo.toml
sports/basketball/examples/: season.rs
sports/basketball/src/: attributes.rs  database.rs  engine.rs  injuries.rs  lib.rs  matchday.rs  morale.rs  persistence.rs  playback.rs  season.rs  tally.rs  view.rs
sports/cycling/: Cargo.toml
sports/cycling/examples/: grand_tour.rs
sports/cycling/src/: attributes.rs  database.rs  lib.rs  playback.rs  race.rs  stage.rs
sports/football/: Cargo.toml
sports/football/examples/: club_world.rs  gen_database.rs  league_season.rs  matchday.rs  multi_season.rs  pyramid.rs  scale.rs
sports/football/src/: attributes.rs  cards.rs  career.rs  database.rs  engine.rs  injuries.rs  lib.rs  matchday.rs  morale.rs  persistence.rs  playback.rs  season.rs  tally.rs  train.rs  view.rs
sports/tennis/: Cargo.toml
sports/tennis/examples/: grand_slam.rs
sports/tennis/src/: attributes.rs  bracket.rs  database.rs  engine.rs  lib.rs  playback.rs
