# Cargo workspace root.
#
# Dependency direction (enforced by review, see CLAUDE.md): sport crates depend on
# `sim-core`; `sim-core` never depends on a sport crate or any UI crate.
#
# `sports/*` and `app/` are intentionally NOT members yet — they get added at their
# build-order step. Adding them empty now would only invite premature abstraction.
[workspace]
resolver = "2"
members = ["sim-core", "sports/football", "sports/cycling"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"

# Shared dependency versions live here so every crate pins the same revisions.
[workspace.dependencies]
bevy_ecs = "0.16"
rayon = "1"
serde = { version = "1", features = ["derive"] }
# bincode 1.x: serde-based, so save migration is the ordinary serde path. Deliberately
# not bincode 2.x or rkyv — see docs/ARCHITECTURE.md "Persistence".
bincode = "1.3"
# Pinned to the 0.8 line (with rand_pcg 0.3) for a stable, well-known API. Pcg is a
# small, fast, statistically solid generator that seeds cleanly from a u64 — exactly
# what the per-match deterministic streams need.
rand = "0.8"
rand_pcg = "0.3"

# Build the workspace optimized-ish even in dev for the sim hot path; this is a
# CPU-bound simulation, debug-speed ECS iteration is painfully slow to dogfood.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
