[package]
name = "cycling"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Cycling sport implementation: stage simulation, general classification."

[dependencies]
sim-core = { path = "../../sim-core" }
bevy_ecs.workspace = true
rayon.workspace = true
rand.workspace = true
rand_pcg.workspace = true
# Starting-database ability record (de)serialization.
serde = { workspace = true }
serde_json.workspace = true

[lints.clippy]
all = "warn"
